main.css
body, html {
    height: 100%;
    margin: 0;
}

.bg {
    background-image: url('images/bg-dubai.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 100%;
    /* opacity: 0.4; */
}

.intro {
    height: 945px;
}

a {
    font-weight: bold;
}

.name {
    font-size: 18px;
    margin-left: 10px ;
    text-decoration: none;
    opacity: 0.1; 
    color: white;
}

i {
    font-size: 18px;
    opacity: 0.1; 
    color: white;
}

.hi {
    border-bottom: solid rgb(33, 156, 239);
    border-width: 3px;
    width: 50px;
    color: black;
}

.me {
    height: 945px;
    background-color: rgb(33, 156, 239);
}

.message {
    height: 945px;
}

.btn {
    background-color: rgb(33, 156, 239);
}

nav.scroll {
    background-color: white;
}

nav {
    position: fixed;
    padding: 9px;
    width: 100%;
    transition: background-color 0.4s ease-out;
    display: flex;
    justify-content: space-between ;
    color: white;
  }

